# ev-protobufs

./: Cargo.toml  LICENSE_MIT  README.md  build.rs
.github/workflows/: publish.yml
proto/: bookstore.proto
proto/bookstore/v1/: bookstore.proto
proto/greeter/v1/: greeter.proto
proto/health/v1/: health_api.proto
proto/user/v1/: user.proto  user_api.proto
review/v1/: metrics.proto  review.proto  review_api.proto
src/: lib.rs
user/v1/: user.proto  user_api.proto
