[package]
name = "ev-protobufs"
version = "1.0.9"
edition = "2021"
authors = ["Ethan Cheatham <ethanwcheatham@gmail.com>"]
description = "Generated tonic rust files based on proto definitions"
keywords = ["rpc", "grpc", "tonic", "prost"]
license = "MIT"
readme = "README.md"

[dependencies]
prost = "0.11"
tonic = "0.8"
serde = "1.0.137"
async-graphql = "4.0.1"

[build-dependencies]
tonic-build = "0.8"
glob = "0.3.0"
